# Datastructures-and-Algorithms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: array.h
include/utils/: comparators.h  result_code.h
src/data_structures/: array.c
src/data_structures/array/: array.c  array.h
src/utils/: comparators.c  comparators.h  result_code.c
tests/: CMakeLists.txt  CmakeLists.txt  main.c  test_array.c  test_helpers.c  test_malloc_wraper.c
tests/test_data/: data_15.txt
tests/utils/: test_helpers.h  test_malloc_wraper.h
